# ETL

./: .gitignore  README_DOCKER.md  docker-compose.yaml  docker.env
dashboard/: Dockerfile  main.py  pyproject.toml
dashboard/tabs/: __init__.py  action_plans.py  files.py  report.py
script/: .env.example  Dockerfile  Dockerfile.realtime  mongo_Script.js  pyproject.toml
script/_types/: __init__.py  types.py
script/entities/: __init__.py  risk_calculator.py
script/orchestrators/: __init__.py  action_plan_orchestrator.py  base.py  files_orchestrator.py  reports_orchestrator.py
script/repositories/: __init__.py  clickhouse.py  mongo.py  mysql.py
script/schemas/: __init__.py  report_mongo.py
script/services/: __init__.py  action_plan.py  file.py  report.py
script/tasks/: extract.py  extract_realtime.py
script/utils/: __init__.py  constants.py  enviroments.py
